--- a/css/styles.css
+++ b/css/styles.css
@@ -1,1 +1,39 @@
-@import url('reset.css');
+@import url("reset.css");
+
+body {
+    background-color: gray;
+    background-image: url("../images/bg-body.jpg");
+}
+
+h1, h2, h3, h4 {
+    font-weight: bold;
+}
+
+#main {
+    background-color: white;
+}
+
+.button {
+    background-color: hotpink;
+    color: white;
+}
+
+/* descendant combinator */
+blockquote p {
+    font-style: italic;
+}
+
+/* child combinator */
+aside > h3 {
+    font-weight: bold;
+}
+
+/* adjacent sibling combinator */
+p + .offer {
+    color: red;
+}
+
+/* general sibling combinator */
+p ~ h2 {
+    color: black;
+}
