--- a/css/styles.css
+++ b/css/styles.css
@@ -50,3 +50,30 @@ a[title] {
 input[type="submit"][class="button"] {
     font-size: 1em;
 }
+
+/* pseudo classes */
+a:link {
+    text-decoration: underline;
+}
+
+a:hover {
+    text-decoration: none;
+}
+
+a:visited {
+    color: black;
+}
+
+a:active {
+    color: red;
+}
+
+a:focus {
+    outline-color: black;
+    outline-style: dotted;
+    outline-width: 1px;
+}
+
+a:visited:active {
+    color: orange;
+}
