--- a/css/styles.css
+++ b/css/styles.css
@@ -95,3 +95,9 @@ p:nth-of-type(1) {
 }
 
 /* also :empty() & :root for empty & root elements
+
+/* target pseudo-class */
+/* style target of anchor link */
+:target {
+    color: red;
+}
