--- a/css/styles.css
+++ b/css/styles.css
@@ -22,6 +22,9 @@ h1, h2, h3, h4 {
     /* recognise rgba, first statement is used */
     background-color: white;
     background-color: rgba(255, 255, 255, 0.6);
+    border-color: #CCC;
+    border-style: solid;
+    border-width: 1px;
 }
 
 .button {
