Add Border Image to Footer Div

--- a/css/styles.css
+++ b/css/styles.css
@@ -103,6 +103,9 @@ blockquote p:after {
     background-color: #CCC;
     background-image: url("../images/bg-footer.jpg");
     border-top: #999 dotted 4px;
+    border-image-source: url("../images/bdr-footer.png");
+    border-image-slice: 4;
+    border-image-repeat: repeat;
 }
 
 .showcase .button:hover {
