--- a/css/styles.css
+++ b/css/styles.css
@@ -45,6 +45,7 @@ p + .offer {
 
 input[type="text"], input[type="email"] {
     border: none;
+    box-shadow: -3px 3px 2px 0 #CCC inset;
 }
 
 input[type="submit"][class="button"] {
