--- a/css/styles.css
+++ b/css/styles.css
@@ -107,6 +107,7 @@ blockquote p:after {
     background-color: #00ACDF;
     border-radius: 8px;
     border: rgba(0,0,0,0.1) solid 5px;
+    background-image: url("../images/icon-newsletter.png");
 }
 
 #footer {
