--- a/css/styles.css
+++ b/css/styles.css
@@ -61,6 +61,7 @@ input[type="text"], input[type="email"] {
 
 input[type="submit"][class="button"] {
     font-size: 1em;
+    cursor: pointer;
 }
 
 input[type="submit"][class="button"]:hover {
