--- a/css/styles.css
+++ b/css/styles.css
@@ -85,9 +85,7 @@ a:active {
 }
 
 a:focus {
-    outline-color: black;
-    outline-style: dotted;
-    outline-width: 1px;
+    outline: black dotted 1px;
 }
 
 #content {
