--- a/css/styles.css
+++ b/css/styles.css
@@ -17,6 +17,10 @@ body {
     max-width: 960px;
 }
 
+img {
+    max-width: 100%;
+}
+
 #header, #main, #footer {
     font-size: 1.6em; /* inherited value (10px) x 1.6em = 16px */
 }
