--- a/css/styles.css
+++ b/css/styles.css
@@ -13,12 +13,24 @@ body {
     background-color: #f5f5f5;
     background-image: url("../images/bg-body.jpg");
     font-size: 62.5%;
-    margin: 0 auto;
+    margin: 2.5em auto 0 auto;
     max-width: 960px;
 }
 
 img {
     max-width: 100%;
+}
+
+#header {
+    margin: 0 0 2em 0;
+}
+
+#header .logo {
+    margin: 2.4em 0;
+}
+
+#header nav {
+    margin-top: 2em;
 }
 
 #header, #main, #footer {
@@ -59,8 +71,13 @@ blockquote cite:before {
     content: "- ";
 }
 
+aside {
+    margin: 0 0 2em 0;
+}
+
 aside > h3 {
     font-weight: bold;
+    margin: 0 0 1.6em 0;
 }
 
 p + .offer {
@@ -75,6 +92,7 @@ input[type="text"], input[type="email"] {
 input[type="submit"][class="button"] {
     font-size: 1em;
     cursor: pointer;
+    margin: 2em auto 1em;
 }
 
 input[type="submit"][class="button"]:hover {
@@ -114,6 +132,26 @@ a:focus {
     padding: 6%;
 }
 
+#newsletter h3 {
+    margin: 0 0 1em 0;
+}
+
+#newsletter label {
+    margin: 1.5em 0 0 0;
+}
+
+.aside {
+    margin: 0 0 2em 0;
+}
+
+.post h3 {
+    margin: 0 0 1em 0;
+}
+
+.post img {
+    margin: 0 0 .5em 0;
+}
+
 #footer {
     background: #ccc url("../images/bg-footer.jpg");
     border-top: #999 dotted 4px;
@@ -136,6 +174,24 @@ a:focus {
 
 #content {
     width: 65%;
+    margin: 0 auto;
+}
+
+#content h1, #content h2, #content h3, #content h4 {
+    margin: 0 0 1.6em 0;
+}
+
+#content p, #content ul {
+    margin: 0 0 1.25em 0;
+}
+
+blockquote cite {
+    margin: 0.625em 0 0 0;
+}
+
+.container {
+    max-width: 920px;
+    margin: 0 auto;
 }
 
 #header nav > ul {
