--- a/css/styles.css
+++ b/css/styles.css
@@ -182,6 +182,7 @@ a:focus {
 #content {
     width: 65%;
     margin: 0 auto;
+    float: left;
 }
 
 #content h1, #content h2, #content h3, #content h4 {
@@ -237,4 +238,9 @@ blockquote cite {
 
 .benefits {
     clear: left;
+}
+
+.sidebar {
+    float: right;
+    width: 25%;
 }
