--- a/css/styles.css
+++ b/css/styles.css
@@ -274,6 +274,18 @@ blockquote cite {
     padding: 10px 20px;
 }
 
+#header nav ul ul {
+    /* Style all lists below the top level list */
+    background: #F5F5F5;
+    border: 1px solid #CCC;
+    border-bottom-left-radius: 8px;
+    border-bottom-right-radius: 8px;
+    border-top: none;
+    padding: 20px 0;
+    position: absolute;
+    min-width: 140px;
+}
+
 .testimonials {
     padding: 1em 0 0 0;
 }
