Add More Z-Index

--- a/css/styles.css
+++ b/css/styles.css
@@ -209,6 +209,7 @@ a:focus {
     position: absolute;
     top: 0;
     left: 0;
+    z-index: 5;
 }
 
 .showcase .button:hover {
@@ -354,4 +355,5 @@ blockquote cite {
     bottom: 0;
     position: fixed;
     right: 0;
+    z-index: 9;
 }
