Use Font Face to Load Local Font Files

--- a/css/styles.css
+++ b/css/styles.css
@@ -9,13 +9,20 @@ Project Files: 06-00
 
 @import url("reset.css");
 
+@font-face {
+    font-family: Average;
+    src: url("../fonts/Average-Regular.eot");
+    src: local("Average"),
+        url("../fonts/Average-Regular.woff");
+}
+
 body {
     background-color: #f5f5f5;
     background-image: url("../images/bg-body.jpg");
     font-size: 62.5%;
     margin: 2.5em auto 0 auto;
     max-width: 960px;
-    font-family: Georgia, serif;
+    font-family: Average, Georgia, serif;
 }
 
 img {
