--- a/css/styles.css
+++ b/css/styles.css
@@ -9,13 +9,6 @@ Project Files: 06-00
 
 @import url("reset.css");
 
-@font-face {
-    font-family: Average;
-    src: url("../fonts/Average-Regular.eot");
-    src: local("Average"),
-        url("../fonts/Average-Regular.woff");
-}
-
 body {
     background-color: #f5f5f5;
     background-image: url("../images/bg-body.jpg");
@@ -50,6 +43,7 @@ img {
 
 h1, h2, h3, h4 {
     font-weight: bold;
+    font-family: Belgrano, Georgia, serif;
 }
 
 #main {
