--- a/css/styles.css
+++ b/css/styles.css
@@ -103,7 +103,10 @@ p + .offer {
     color: red;
     font-style: italic;
     /*font-variant: small-caps;*/
+}
 
+.strike {
+    text-decoration: line-through;
 }
 
 input[type="text"], input[type="email"] {
