--- a/css/styles.css
+++ b/css/styles.css
@@ -103,6 +103,7 @@ p + .offer {
     color: red;
     font-style: italic;
     /*font-variant: small-caps;*/
+    text-transform: uppercase;
 }
 
 .strike {
