--- a/css/styles.css
+++ b/css/styles.css
@@ -104,6 +104,7 @@ p + .offer {
     font-style: italic;
     /*font-variant: small-caps;*/
     text-transform: uppercase;
+    text-shadow: 2px 2px 1px rgba(0, 0, 0, 0.2);
 }
 
 .strike {
