--- a/css/styles.css
+++ b/css/styles.css
@@ -106,6 +106,7 @@ p + .offer {
     text-transform: uppercase;
     text-shadow: 2px 2px 1px rgba(0, 0, 0, 0.2),
                  4px 4px 2px rgba(0, 0, 0, 0.1);
+    text-align: center;
 }
 
 .strike {
