--- a/css/styles.css
+++ b/css/styles.css
@@ -62,6 +62,11 @@ h1, h2, h3, h4 {
     font-weight: bold;
 }
 
+.button:link {
+    text-transform: uppercase;
+    text-decoration: none;
+}
+
 blockquote {
     position: relative;
     text-align: justify;
