--- a/css/styles.css
+++ b/css/styles.css
@@ -371,6 +371,7 @@ blockquote cite {
 .benefits ul {
     list-style-type: disc;
     list-style-image: url("../images/check.png");
+    list-style-position: inside;
 }
 
 .sidebar {
