--- a/css/styles.css
+++ b/css/styles.css
@@ -369,9 +369,7 @@ blockquote cite {
 }
 
 .benefits ul {
-    list-style-type: disc;
-    list-style-image: url("../images/check.png");
-    list-style-position: inside;
+    list-style: disc inside url("../images/check.png");
 }
 
 .sidebar {
