--- a/css/styles.css
+++ b/css/styles.css
@@ -396,4 +396,12 @@ blockquote cite {
     position: fixed;
     right: 0;
     z-index: 9;
+    background: #00B0DC;
+    color: white;
+    text-align: center;
+    font-family: Tahoma, Verdana, sans-serif;
+    font-size: 1.1em;
+    font-weight: bold;
+    min-height: 50px;
+    width: 200px;
 }
