--- a/css/styles.css
+++ b/css/styles.css
@@ -405,3 +405,9 @@ blockquote cite {
     min-height: 50px;
     width: 200px;
 }
+
+.banner-ad span {
+    clear: both;
+    display: block;
+    font-size: 2.2em;
+}
