--- a/css/styles.css
+++ b/css/styles.css
@@ -404,6 +404,7 @@ blockquote cite {
     font-weight: bold;
     min-height: 50px;
     width: 200px;
+    -webkit-transform: translate(50px, -25px);
 }
 
 .banner-ad span {
