--- a/css/styles.css
+++ b/css/styles.css
@@ -404,7 +404,8 @@ blockquote cite {
     font-weight: bold;
     min-height: 50px;
     width: 200px;
-    -webkit-transform: translate(50px, -25px) rotate(-45deg) scale(1.1);
+    -webkit-transform: translate(75px, -25px) rotate(-45deg) scale(1.1);
+    -webkit-transform-origin: 50% 100%;
 }
 
 .banner-ad span {
