--- a/css/styles.css
+++ b/css/styles.css
@@ -376,6 +376,7 @@ blockquote cite {
 .sidebar {
     float: right;
     width: 25%;
+    -webkit-transform: rotateY(-40deg);
 }
 
 .sidebar:hover {
