Pass Down 3D Space to Sidebar Elements

--- a/css/styles.css
+++ b/css/styles.css
@@ -377,6 +377,7 @@ blockquote cite {
     float: right;
     width: 25%;
     -webkit-transform: rotateY(-40deg);
+    -webkit-transform-style: preserve-3d;
 }
 
 .sidebar:hover {
