--- a/css/styles.css
+++ b/css/styles.css
@@ -415,8 +415,13 @@ blockquote cite {
     font-weight: bold;
     min-height: 50px;
     width: 200px;
-    -webkit-transform: translate(75px, -25px) rotate(-45deg) scale(1.1);
+    -webkit-transform: translate(75px, -25px) rotate(-45deg) scale(.8);
     -webkit-transform-origin: 50% 100%;
+}
+
+.banner-ad:hover {
+    cursor: default;
+    -webkit-transform: translate(75px, -25px) rotate(-45deg) scale(1.1);
 }
 
 .banner-ad span {
