--- a/css/styles.css
+++ b/css/styles.css
@@ -422,8 +422,7 @@ blockquote cite {
 .banner-ad:hover {
     cursor: default;
     -webkit-transform: translate(75px, -25px) rotate(-45deg) scale(1.1);
-    -webkit-transition-property: -webkit-transform;
-    -webkit-transition-duration: 1s;
+    -webkit-transition: -webkit-transform 1s;
 }
 
 .banner-ad span {
