--- a/css/styles.css
+++ b/css/styles.css
@@ -242,6 +242,16 @@ a:focus {
     background-color: #00ACDF;
 }
 
+@-webkit-keyframes fadeOut {
+    from {
+        opacity: 1;
+    }
+
+    to {
+        opacity: 0;
+    }
+}
+
 .showcase ul {
     background: #009CC8;
     position: relative;
