--- a/css/styles.css
+++ b/css/styles.css
@@ -268,6 +268,7 @@ a:focus {
     z-index: 3;
     position: relative;
     -webkit-animation-name: fadeOut;
+    -webkit-animation-duration: 5s;
 }
 
 .showcase li:nth-child(2) {
