--- a/css/styles.css
+++ b/css/styles.css
@@ -269,6 +269,7 @@ a:focus {
     position: relative;
     -webkit-animation-name: fadeOut;
     -webkit-animation-duration: 5s;
+    -webkit-animation-timing-function: ease-in-out;
 }
 
 .showcase li:nth-child(2) {
