--- a/css/styles.css
+++ b/css/styles.css
@@ -270,6 +270,7 @@ a:focus {
     -webkit-animation-name: fadeOut;
     -webkit-animation-duration: 5s;
     -webkit-animation-timing-function: ease-in-out;
+    -webkit-animation-delay: 5s;
 }
 
 .showcase li:nth-child(2) {
