Apply Animation Infinite Iteration Count to First Showcase Image

--- a/css/styles.css
+++ b/css/styles.css
@@ -271,6 +271,7 @@ a:focus {
     -webkit-animation-duration: 5s;
     -webkit-animation-timing-function: ease-in-out;
     -webkit-animation-delay: 5s;
+    -webkit-animation-iteration-count: infinite;
 }
 
 .showcase li:nth-child(2) {
