--- a/css/styles.css
+++ b/css/styles.css
@@ -272,6 +272,7 @@ a:focus {
     -webkit-animation-timing-function: ease-in-out;
     -webkit-animation-delay: 5s;
     -webkit-animation-iteration-count: infinite;
+    -webkit-animation-direction: alternate;
 }
 
 .showcase li:nth-child(2) {
