Apply Animation Play State to List Item When UL Hovered Over

--- a/css/styles.css
+++ b/css/styles.css
@@ -264,6 +264,10 @@ a:focus {
     width: 100%;
 }
 
+.showcase ul:hover li {
+    -webkit-animation-play-state: paused;
+}
+
 .showcase li:first-child {
     z-index: 3;
     position: relative;
