--- a/css/styles.css
+++ b/css/styles.css
@@ -276,10 +276,12 @@ a:focus {
 
 .showcase li:nth-child(2) {
     z-index: 2;
+    -webkit-animation-delay: 10s;
 }
 
 .showcase li:nth-child(3) {
     z-index: 1;
+    -webkit-animation-delay: 10s;
 }
 
 #content {
